--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "recoil": "^0.7.7",
     "redux": "^4.2.1",
     "styled-components": "^5.3.9",
     "typescript": "5.0.3"
