feat(khg):Test push

--- a/day-view-web/.gitignore
+++ b/day-view-web/.gitignore
@@ -36,3 +36,12 @@ yarn-error.log*
 next-env.d.ts
 
 .xml
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
