--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -33,6 +33,7 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
     "prettier": "2.8.4"
   },
