--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/cookie": "^0.5.1",
     "@types/node": "18.15.11",
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.31",
@@ -18,6 +19,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "cookie": "^0.5.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "msw": "^1.2.1",
