--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.6",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.13.2",
+    "@mui/x-date-pickers": "^6.9.0",
     "@types/axios": "^0.14.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "18.15.11",
@@ -20,6 +26,7 @@
     "axios": "^1.4.0",
     "babel-plugin-styled-components": "^2.0.7",
     "cookie": "^0.5.0",
+    "dayjs": "^1.11.8",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "msw": "^1.2.1",
