--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/styles": "^5.13.2",
     "@mui/x-date-pickers": "^6.9.0",
+    "@tanstack/react-query-devtools": "^4.29.15",
     "@types/axios": "^0.14.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "18.15.11",
