--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.5.2",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "recoil": "^0.7.7",
