feat(shared): 로그인 환경 변수 테스트2

--- a/day-view-web/.env
+++ b/day-view-web/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_WEB_URL=https://day-view.vercel.app
 
-NEXT_PUBLIC_API_URL=http://43.200.181.39:8081/api
+NEXT_PUBLIC_API_URL=http://43.200.181.39:8081
 
-NEXT_PUBLIC_KAKAO_URL=http://43.200.181.39:8081/api/oauth2/authorization/kakao
+NEXT_PUBLIC_KAKAO_URL=http://43.200.181.39:8081/oauth2/authorization/kakao
