--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -40,15 +45,14 @@
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.5.2",
     "react-query": "^3.39.3",
-    "react-redux": "^8.0.5",
     "recoil": "^0.7.7",
-    "redux": "^4.2.1",
     "styled-components": "^5.3.9",
     "typescript": "5.0.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
+    "lint-staged": "^14.0.1",
     "prettier": "2.8.4"
   },
   "msw": {
