--- a/day-view-web/.env
+++ b/day-view-web/.env
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_WEB_URL=https://day-view.vercel.app
 
-NEXT_PUBLIC_API_URL=http:https://il1110.site
+NEXT_PUBLIC_API_URL=https://il1110.site
 
-정NEXT_PUBLIC_KAKAO_URL=https://il1110.site/oauth2/authorization/kakao
+NEXT_PUBLIC_KAKAO_URL=https://il1110.site/oauth2/authorization/kakao
+정
