feat: env파일 수정 버전2

--- a/day-view-web/package.json
+++ b/day-view-web/package.json
@@ -6,12 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": "eslint --cache --fix"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
