--- a/day-view-web/.env
+++ b/day-view-web/.env
@@ -1,6 +1,5 @@
-NEXT_PUBLIC_WEB_URL=https://day-view.vercel.app
+NEXT_PUBLIC_WEB_URL=http://localhost:3000
 
-NEXT_PUBLIC_API_URL=http://43.200.181.39:8081
+NEXT_PUBLIC_API_URL=http://localhost:8080
 
-NEXT_PUBLIC_KAKAO_URL=http://43.200.181.39:8081/oauth2/authorization/kakao
-정
+NEXT_PUBLIC_KAKAO_URL=http://localhost:8080/oauth2/authorization/kakao
