--- a/day-view-web/.env
+++ b/day-view-web/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_WEB_URL=https://www.il1110.site
 
-NEXT_PUBLIC_API_URL=https://il1110.site
+NEXT_PUBLIC_API_URL=https://api.il1110.site
 
-NEXT_PUBLIC_KAKAO_URL=https://il1110.site/oauth2/authorization/kakao
-정
+NEXT_PUBLIC_KAKAO_URL=https://api.il1110.site/oauth2/authorization/kakao
+
